Avoid line breaks in ruby tag

--- a/_sass/_ruby-characters.scss
+++ b/_sass/_ruby-characters.scss
@@ -1,3 +1,7 @@
+ruby {
+  white-space: pre-wrap;
+}
+
 rt {
   font-size: 70%;
   line-height: initial;
